[tool.poetry]
name = "cryptodich"
version = "0.1.0"
description = ""
authors = ["Askalbe <92388142+Askalbe@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
