[tool.poetry]
name = "funcoin"
version = "0.1.0"
description = ""
authors = ["Askalbe <92388142+Askalbe@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiohttp = "^3.9.3"
marshmallow-oneofschema = "^3.1.1"
structlog = "^24.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
